--- a/src/main/resources/templates/stickers/index.html
+++ b/src/main/resources/templates/stickers/index.html
@@ -2,11 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
         <title>New Event</title>
     </head>
     <body>
 
+        <!-- New Sticker Form -->
         <form action="#" th:action="@{/stickers}" method="POST">
             <ul>
                 <li>
@@ -39,5 +46,19 @@
                 </li>          
             </ul>                 
         </form>
+
+        <!-- View Sticker Cards -->
+        <div class="card" th:each="sticker : ${myStickers}">
+            <div class="card-body">
+                <span th:text="${sticker.content}" /> <br>
+                <span th:text="${sticker.fkAuthor}" /> <br>
+                <span th:text="${sticker.eventDate}" /> <br>
+                <span th:text="${sticker.duration}" />
+            </div>
+        </div>
+
+        <!-- Option 1: Bootstrap Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
     </body>
 </html>
