--- a/src/main/resources/templates/users/new.html
+++ b/src/main/resources/templates/users/new.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <form action="#" th:action="@{/users}" th:object="${user}" method="post">
-            <p>Username: <input type="text" th:field="*{username}" required/></p>
-            <p>Password: <input type="password" th:field="*{password}" required/></p>
+            <p>Username: <input type="text" th:field="*{username}" id="username" required/></p>
+            <p>Password: <input type="password" th:field="*{password}" id="password" required/></p>
             <p><input type="submit" value="Submit" id="submit"/> <input type="reset" value="Reset" /></p>
         </form>
     </body>
