carousel border deleted

--- a/src/main/resources/templates/stickers/index.html
+++ b/src/main/resources/templates/stickers/index.html
@@ -103,7 +103,7 @@
   <div class="container-fluid ">
     <!-- <div class="row "> -->
     <div class="row justify-content-center">
-      <div class="col-10 col_carousel text-center rounded border  ">
+      <div class="col-10 col_carousel text-center rounded">
 
         <!-- carousel start  -->
         <!--<div class="bd-example">-->
