--- a/src/main/resources/templates/stickers/index.html
+++ b/src/main/resources/templates/stickers/index.html
@@ -72,7 +72,7 @@
       </div>
       <div class="mt-3">
         <label class="form-label" for="eventDate">Date:</label>
-        <input class="form-control" type="date" id="eventDate" name="eventDate" th:min="${dateToday.plusDays(-1)}" max="2022-12-31"
+        <input class="form-control" type="date" id="eventDate" name="eventDate" th:min="${dateToday}" max="2022-12-31"
           required>
       </div>
       <div class="mt-3">
@@ -149,7 +149,7 @@
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
-                          <th scope="col">Datum</th>
+                          <th scope="col">Date</th>
                           <th scope="col">Title</th>
                           <th scope="col">Time</th>
                           <th scope="col">Duration</th>
@@ -203,7 +203,7 @@
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
-                          <th scope="col">Datum</th>
+                          <th scope="col">Date</th>
                           <th scope="col">Title</th>
                           <th scope="col">Time</th>
                           <th scope="col">Duration</th>
@@ -257,7 +257,7 @@
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
-                          <th scope="col">Datum</th>
+                          <th scope="col">Date</th>
                           <th scope="col">Title</th>
                           <th scope="col">Time</th>
                           <th scope="col">Duration</th>
@@ -288,7 +288,7 @@
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
-                          <th scope="col">Datum</th>
+                          <th scope="col">Date</th>
                           <th scope="col">Title</th>
                           <th scope="col">Time</th>
                           <th scope="col">Duration</th>
@@ -319,7 +319,7 @@
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
-                          <th scope="col">Datum</th>
+                          <th scope="col">Date</th>
                           <th scope="col">Title</th>
                           <th scope="col">Time</th>
                           <th scope="col">Duration</th>
@@ -350,7 +350,7 @@
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
-                          <th scope="col">Datum</th>
+                          <th scope="col">Date</th>
                           <th scope="col">Title</th>
                           <th scope="col">Time</th>
                           <th scope="col">Duration</th>
@@ -381,7 +381,7 @@
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
-                          <th scope="col">Datum</th>
+                          <th scope="col">Date</th>
                           <th scope="col">Title</th>
                           <th scope="col">Time</th>
                           <th scope="col">Duration</th>
@@ -412,7 +412,7 @@
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
-                          <th scope="col">Datum</th>
+                          <th scope="col">Date</th>
                           <th scope="col">Title</th>
                           <th scope="col">Time</th>
                           <th scope="col">Duration</th>
@@ -443,7 +443,7 @@
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
-                          <th scope="col">Datum</th>
+                          <th scope="col">Date</th>
                           <th scope="col">Title</th>
                           <th scope="col">Time</th>
                           <th scope="col">Duration</th>
@@ -474,7 +474,7 @@
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
-                          <th scope="col">Datum</th>
+                          <th scope="col">Date</th>
                           <th scope="col">Title</th>
                           <th scope="col">Time</th>
                           <th scope="col">Duration</th>
@@ -505,7 +505,7 @@
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
-                          <th scope="col">Datum</th>
+                          <th scope="col">Date</th>
                           <th scope="col">Title</th>
                           <th scope="col">Time</th>
                           <th scope="col">Duration</th>
@@ -536,7 +536,7 @@
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
-                          <th scope="col">Datum</th>
+                          <th scope="col">Date</th>
                           <th scope="col">Title</th>
                           <th scope="col">Time</th>
                           <th scope="col">Duration</th>
