--- a/src/main/resources/templates/users/new.html
+++ b/src/main/resources/templates/users/new.html
@@ -4,12 +4,27 @@
     <head>
         <meta charset="UTF-8">
         <title>Signup</title>
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+        <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous"/>    
     </head>
     <body>
-        <form action="#" th:action="@{/users}" th:object="${user}" method="post">
-            <p>Username: <input type="text" th:field="*{username}" id="username" required/></p>
-            <p>Password: <input type="password" th:field="*{password}" id="password" required/></p>
-            <p><input type="submit" value="Submit" id="submit"/> <input type="reset" value="Reset" /></p>
+        <div class="container">
+
+        <form class="form-signin" action="#" th:action="@{/users}" th:object="${user}" method="post">
+            <h2 class="form-signin-heading">Create a new user</h2>
+            <p>
+                <label for="username" class="sr-only">Username:</label> 
+                <input type="text" th:field="*{username}" id="username" class="form-control" placeholder="Username" required autofocus/>
+            </p>
+            <p>
+                <label for="password" class="sr-only">Password</label>
+                <input type="password" th:field="*{password}" id="password" class="form-control" placeholder="Password" required/>
+            </p>
+            <p>
+                <input class="btn btn-lg btn-primary btn-block" type="submit" value="Submit" id="submit"/> 
+            </p>
         </form>
+
+    </div>
     </body>
 </html>
