--- a/src/main/resources/templates/stickers/index.html
+++ b/src/main/resources/templates/stickers/index.html
@@ -40,7 +40,7 @@
 <body>
 
   <!-- navbar  -->
-  <div class="navbar" style="background-color: #465d84; color: #f0f0f0 ;  ">
+  <div class="navbar sticky-top" style="background-color: #465d84; color: #f0f0f0 ;  ">
 
     <div class="container-fluid overflow-hidden">
       <div class="col-3 text-start">
