--- a/src/main/resources/templates/stickers/index.html
+++ b/src/main/resources/templates/stickers/index.html
@@ -93,6 +93,15 @@
           <option value="16">16h</option>
         </select>
       </div>
+
+      <div class="mt-3">
+        <label class="form-label" for="eventDuration">Group:</label>
+        <select class="form-select" name="eventDuration" id="eventDuration" required>
+          <option value="" disabled selected hidden>Please choose...</option>
+          <option value="1"> Gruppe </option>
+        </select>
+      </div>
+
       <div class="mt-3">
         <button class="btn btn-primary" type="submit">Submit</button>
       </div>
