--- a/src/main/resources/templates/groups/groups.html
+++ b/src/main/resources/templates/groups/groups.html
@@ -4,17 +4,52 @@
     <head>
         <meta charset="UTF-8">
         <title>Groups</title>
+        <style type='text/css'>
+            ul.nav li.dropdown:hover ul.dropdown-menu {
+                display: block;
+            }
+        </style>
     </head>
     <body>
+        <p>Create a new group:</p>
+        <form action="#" th:action="@{/groups}" method="post" >
+            <p><input type="text" name="groupname" id="groupname" placeholder="Groupname" required/></p>
+            <p><input type="submit" value="Submit" id="submit"/> <input type="reset" value="Reset" /></p>
+        </form>
+        <br>------------------------------------------------<br>
+        <p>Groups managed by you:</p>
         <div th:each="group : ${groups}">
             <div class="card-body">
                 <span th:text="${group.groupname}" /> <br>
-                <span th:text="${group.groupowner}" />
+                <p>Add a member:</p>
+            </div>
+            <form action="#" th:action="@{/addMember}" method="post" ></form>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="dropdown">
+                            <a href="./groups" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Add a member<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <div th:each="addMember : ${users}">
+                                    <span th:text="${addMember.username}" />
+                                    <li role="separator" class="divider"></li>
+                                </div>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </form>
+        </div>
+
+
+
+
+
+        <br>------------------------------------------------<br>
+        <p>Groups where are you member from:</p>
+        <div th:each="member : ${member}">
+            <div class="card-body">
+                <span th:text="${member.groupname}" />
             </div>
         </div>
-        <form action="#" th:action="@{/groups}" method="post">
-            <p>Groupname: <input type="text" name="groupname" id="groupname" required/></p>
-            <p><input type="submit" value="Submit" id="submit"/> <input type="reset" value="Reset" /></p>
-        </form>
     </body>
 </html>
