--- a/src/main/resources/templates/stickers/index.html
+++ b/src/main/resources/templates/stickers/index.html
@@ -64,7 +64,7 @@
   <!-- end navbar  -->
 
     
-  <div class="container con1"></div>
+  <div class="container space"></div>
 
 
   
@@ -78,7 +78,7 @@
       <div class="col-10 col_carousel text-center rounded shadow-lg">
         
         <!-- Canvas Start -->
-        <a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+        <a class="btn btn-primary mt-3 mb-2" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
           Add item
         </a>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
@@ -184,7 +184,7 @@
          
             <!-- January  -->
             <div class="carousel-item" th:classappend="${currentMonthValue == 1 } ? 'active' : '' ">
-              <div class="container col-8">
+              <div class="container col-8 ">
                 <div class="card mt-2 mb-2 ">
                   <div class="card-header">
                     January
