updated edit feature to include group selection

--- a/src/main/resources/templates/stickers/edit.html
+++ b/src/main/resources/templates/stickers/edit.html
@@ -12,6 +12,27 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>Update Event</title>
+    <style>
+        body {
+          background-color: #587a9db5
+        }
+      
+        .flex-container {
+          display: flex;
+          --background-color: rgb(208, 227, 246);
+        }
+      
+        .flex-container>div {
+          background-color: #fbfbfb;
+          margin: 10px;
+          padding: 20px;
+          font-size: 30px;
+        }
+      
+        .navbar-brand.brand {
+          color: #b46d0a
+        }
+      </style>
 </head>
 
 <body>
