--- a/src/main/resources/templates/stickers/index.html
+++ b/src/main/resources/templates/stickers/index.html
@@ -64,7 +64,8 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <li th:each="group : ${myGroupMemberships}">
-                <a class="dropdown-item" th:href="@{/stickers(group=${group.getId})}" th:text="${group.getGroupname}"></a>
+                <a class="dropdown-item" th:href="@{/stickers(group=${group.getId})}"
+                  th:text="${group.getGroupname}"></a>
               </li>
             </ul>
           </li>
@@ -81,82 +82,85 @@
   </nav>
   <!-- end navbar  -->
 
-    
+
   <div class="container space"></div>
 
   <!-- carousel placing  -->
-  <div class="container-fluid">
-    
-    <div class="row justify-content-center">
+  <div class="container-fluid ">
 
-      <div class="col-10 col_carousel text-center rounded shadow-lg">
-        
+    <div class="row justify-content-center ">
+
+      <div class="col-10 col_carousel text-center rounded shadow-lg ">
+
         <!-- Canvas Start -->
-        <a class="btn btn-primary mt-3 mb-2" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+        <a class="btn btn-primary mt-3 mb-2" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
+          aria-controls="offcanvasExample">
           Add item
         </a>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample"
+          aria-labelledby="offcanvasExampleLabel">
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasExampleLabel">new Item</h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
-            <div> <!-- Canvas Body Start -->
-              
+            <div>
+              <!-- Canvas Body Start -->
+
               <div class="container-fluid">
-              <div class="row justify-content-center">
-             
-              
-              <div class="container col-2 card card-body">
-                <form action="#" th:action="@{/stickers}" method="POST">
-                  <div class="mt-3">
-                    <label class="form-label" for="eventTitle">Title:</label>
-                    <input class="form-control" type="text" id="eventTitle" name="eventTitle" required>
+                <div class="row justify-content-center">
+
+
+                  <div class="container col-2 card card-body">
+                    <form action="#" th:action="@{/stickers}" method="POST">
+                      <div class="mt-3">
+                        <label class="form-label" for="eventTitle">Title:</label>
+                        <input class="form-control" type="text" id="eventTitle" name="eventTitle" required>
+                      </div>
+                      <div class="mt-3">
+                        <label class="form-label" for="eventDate">Date:</label>
+                        <input class="form-control" type="date" id="eventDate" name="eventDate" th:min="${dateToday}"
+                          max="2022-12-31" required>
+                      </div>
+                      <div class="mt-3">
+                        <label class="form-label" for="eventStartTime">Start Time:</label>
+                        <input class="form-control" type="time" id="eventStartTime" name="eventStartTime" required>
+                      </div>
+                      <div class="mt-3">
+                        <label class="form-label" for="eventDuration">Duration:</label>
+                        <select class="form-select" name="eventDuration" id="eventDuration" required>
+                          <option value="" disabled selected hidden>Please choose...</option>
+                          <option value="1">1h</option>
+                          <option value="2">2h</option>
+                          <option value="3">3h</option>
+                          <option value="4">4h</option>
+                          <option value="6">6h</option>
+                          <option value="8">8h</option>
+                          <option value="12">12h</option>
+                          <option value="16">16h</option>
+                        </select>
+                      </div>
+
+                      <div class="mt-3">
+                        <label class="form-label" for="eventGroup">Group:</label>
+                        <select class="form-select" name="eventGroup" id="eventGroup">
+                          <option value="" selected>Choose group (optional)...</option>
+                          <span th:each="group : ${myGroupMemberships}">
+                            <option th:value="${group.getId}" th:text="${group.getGroupname}"></option>
+                          </span>
+                        </select>
+                      </div>
+
+                      <div class="mt-3">
+                        <button class="btn btn-primary" type="submit">Submit</button>
+                      </div>
+                    </form>
                   </div>
-                  <div class="mt-3">
-                    <label class="form-label" for="eventDate">Date:</label>
-                    <input class="form-control" type="date" id="eventDate" name="eventDate" th:min="${dateToday}" max="2022-12-31"
-                      required>
-                  </div>
-                  <div class="mt-3">
-                    <label class="form-label" for="eventStartTime">Start Time:</label>
-                    <input class="form-control" type="time" id="eventStartTime" name="eventStartTime" required>
-                  </div>
-                  <div class="mt-3">
-                    <label class="form-label" for="eventDuration">Duration:</label>
-                    <select class="form-select" name="eventDuration" id="eventDuration" required>
-                      <option value="" disabled selected hidden>Please choose...</option>
-                      <option value="1">1h</option>
-                      <option value="2">2h</option>
-                      <option value="3">3h</option>
-                      <option value="4">4h</option>
-                      <option value="6">6h</option>
-                      <option value="8">8h</option>
-                      <option value="12">12h</option>
-                      <option value="16">16h</option>
-                    </select>
-                  </div>
-            
-                  <div class="mt-3">
-                    <label class="form-label" for="eventGroup">Group:</label>
-                    <select class="form-select" name="eventGroup" id="eventGroup">
-                      <option value="" selected>Choose group (optional)...</option>
-                      <span th:each="group : ${myGroupMemberships}">
-                        <option th:value="${group.getId}" th:text="${group.getGroupname}" ></option>
-                      </span>
-                    </select>
-                  </div>
-            
-                  <div class="mt-3">
-                    <button class="btn btn-primary" type="submit">Submit</button>
-                  </div>
-                </form>
+
+
+
+                </div>
               </div>
-            
-              
-            
-            </div>
-            </div>
 
             </div> <!-- Canvas Body end -->
           </div>
@@ -165,7 +169,7 @@
 
         <!-- carousel start  -->
         <!--<div class="bd-example">-->
-        <div id="months" class="carousel carousel-dark slide" data-bs-interval="false">
+        <div id="months" class="carousel slide pb-5" data-bs-interval="false">
 
           <div class="carousel-indicators">
             <button type="submit" data-bs-target="#months" data-bs-slide-to="0"
@@ -203,7 +207,7 @@
                   <div class="card-header">
                     January
                   </div>
-                  <div class="card-body">
+                  <div class="card-body pb-3">
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
@@ -257,7 +261,7 @@
                   <div class="card-header">
                     February
                   </div>
-                  <div class="card-body">
+                  <div class="card-body pb-3">
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
@@ -311,7 +315,7 @@
                   <div class="card-header">
                     March
                   </div>
-                  <div class="card-body">
+                  <div class="card-body pb-3">
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
@@ -365,7 +369,7 @@
                   <div class="card-header">
                     April
                   </div>
-                  <div class="card-body">
+                  <div class="card-body pb-3">
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
@@ -420,7 +424,7 @@
                   <div class="card-header">
                     May
                   </div>
-                  <div class="card-body">
+                  <div class="card-body pb-3">
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
@@ -474,7 +478,7 @@
                   <div class="card-header">
                     June
                   </div>
-                  <div class="card-body">
+                  <div class="card-body pb-3">
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
@@ -528,7 +532,7 @@
                   <div class="card-header">
                     July
                   </div>
-                  <div class="card-body">
+                  <div class="card-body pb-3">
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
@@ -582,7 +586,7 @@
                   <div class="card-header">
                     August
                   </div>
-                  <div class="card-body">
+                  <div class="card-body pb-3">
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
@@ -636,7 +640,7 @@
                   <div class="card-header">
                     September
                   </div>
-                  <div class="card-body">
+                  <div class="card-body pb-3">
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
@@ -690,7 +694,7 @@
                   <div class="card-header">
                     October
                   </div>
-                  <div class="card-body">
+                  <div class="card-body pb-3">
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
@@ -744,7 +748,7 @@
                   <div class="card-header">
                     November
                   </div>
-                  <div class="card-body">
+                  <div class="card-body pb-3">
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
@@ -798,7 +802,7 @@
                   <div class="card-header">
                     December
                   </div>
-                  <div class="card-body">
+                  <div class="card-body pb-3">
                     <table class="table table-striped table-hover">
                       <thead>
                         <tr>
